--- a/dip.ipynb
+++ b/dip.ipynb
@@ -451,7 +451,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.8.16"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "0adcc2737ebf6a4a119f135174df96668767fca1ef1112612db5ecadf2b6d608"
+   }
   }
  },
  "nbformat": 4,
